<resources>
    <string name="app_name">Secure Child</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_mob">Phone No.</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? REGISTER HERE</string>
    <string name="btn_link_to_login">Already registered? Sign in</string>
    <!--<string name="title_activity_reset_password">ResetPasswordActivity</string>-->
    <!--<string name="btn_forgot_password">Forgot your password?</string>-->
    <!--<string name="btn_reset_password">Reset Password</string>-->
    <!--<string name="btn_back"><![CDATA[<< Back]]></string>-->
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <!--<string name="lbl_forgot_password">Forgot password?</string>-->
    <string name="btn_viewChild">View Children</string>
    <string name="btn_addChild">Add Child</string>
    <string name="btn_registerChild">Register</string>
    <string name="lable_registerChild">Child Register Form</string>
    <string name="title_activity_childtabs">childtabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_child_dash_options">ChildDashOptions</string>
    <string name="title_activity_children_tab">ChildrenTab</string>

    <!--<string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>-->


</resources>
